<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEmail"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
         android:hint = "username@domain.com" 
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etRegisterPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPassword2"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/etRegisterPwd2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" />

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/tvAtHomeHeat"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/etAtHomeHeat"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/tvAtHomeCool"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/etAtHomeCool"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/tvAwayHomeHeat"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/etAwayHomeHeat"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/tvAwayHomeCool"
            android:textColor="#372c24" />

        <EditText
            android:id="@+id/etAwayHomeCool"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/tvAddress"
            android:textColor="#372c24" />

        <CheckBox
            android:id="@+id/cbCurrentLoc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbCurAddress"
            android:textSize="12sp" />
    </LinearLayout>
    
    <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" /> -->

    <Button
        android:id="@+id/btnRegister2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/btnOK" />

</LinearLayout>